# fastapi-llm-ws-demo

./: .dockerignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .snyk  CHANGELOG.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  hello.py  nginx.conf  pyproject.toml  releaserc.toml  sonar-project.properties
.github/workflows/: deploy.yml  lint.yml  lint_and_test.yml  release.yml  security.yml
app/: __init__.py  main.py
app/constants/: message.py  profiling_stage.py  questions.py  wellness_profile.py
app/controllers/: wellness_profile_controller.py  wellness_profile_routes.py  wellness_profile_ws_routes.py  ws_controller.py  ws_routes.py
app/models/: message.py  wellness_profile.py
app/models/constants/: wellness_profile.py
app/repositories/: shared_state.py
app/usecases/: llm_usecase.py  session_manager_usecase.py  wellness_assistant_usecase.py
init-scripts/: init.sql
