[project]
name = "healf-llm-backend-ws-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]==0.115.12",
    "llama-index==0.12.39",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "ruff==0.11.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = "dynamic"
indent-style = "space"
docstring-code-format = false
line-ending = "auto"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []