[project]
name = "healf-llm-backend-ws-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "boto3==1.38.27",
    "fastapi[standard]==0.115.12",
    "instructor==1.8.3",
    "websockets==15.0.1",
    "anthropic[bedrock]==0.42.0",
    "pydantic==2.10",
    "pydantic-core==2.27.0",
    "structlog==25.3.0",
]

[dependency-groups]
dev = [
    "detect-secrets==1.5.0",
    "pre-commit==4.2.0",
    "ruff==0.11.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = "dynamic"
indent-style = "space"
docstring-code-format = false
line-ending = "auto"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
